--- a/MidnightDiscovery/AndroidManifest.xml
+++ b/MidnightDiscovery/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="phibao37.ent.midnightdiscovery"
     android:versionCode="1"
     android:versionName="1.0" >
@@ -7,39 +8,41 @@
     <uses-sdk
         android:minSdkVersion="12"
         android:targetSdkVersion="21" />
-    
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:supportsRtl="true"
         android:name="phibao37.ent.app.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        
+        android:theme="@style/App.Theme"
+        tools:ignore="UnusedAttribute" >
         <activity
             android:name=".MainActivity" >
         </activity>
-        
         <activity
             android:name=".RegisterActivity"
+            android:theme="@style/App.Theme.ButtonExtend"
             android:windowSoftInputMode="adjustResize|stateVisible" >
         </activity>
-        
         <activity
             android:name=".LoginActivity"
+            android:theme="@style/App.Theme.ButtonExtend"
             android:windowSoftInputMode="adjustResize|stateVisible" >
         </activity>
-        
-        <activity
-            android:name=".SplashScreen">
+        <activity android:name=".SplashScreen"
+            android:theme="@style/App.Theme.ButtonExtend" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
+        <activity android:name=".ProfileActivity" >
+            
+        </activity>
     </application>
 
 </manifest>
